# dms_service

./: .env-example  .gitignore  README.md  main.py  pyproject.toml
app/: routes.py
app/templates/: index.html
flaskhello/: config.py  routes.py
flaskhello/templates/: index.html
interactive_dms_service/: __init__.py  config.py  dmsapi.py  forms.py  routes.py
interactive_dms_service/templates/: dryrun.html  index.html  objectschema.html  result.html  schema.html  search.html  update.html
src/flaskdemo/: hello.py
