[project]
name = "flaskhello"
version = "0.1.0"
description = "minimal flask app for testing the setup"
authors = [
    {name = "hajoho",email = "hajo.hoffmann@stadt.erlangen.de"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "flask-wtf (>=1.2.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
